﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-05-30 Michal Čihař  <michal@cihar.com>
    * libraries/export/sql.php: Fix handling of backquotes (bug #1497239).
    * libraries/export/xml.php: Fix export to XML (bug #1497239).

2006-05-29 Michal Čihař  <michal@cihar.com>
    * lang/galician: Update, thanks to Xosé Calvo - xosecalvo.
    * lang/japanese: Update, thanks to Ishigaki Kenichi - tcool.
    * lang/norwegian: Update, thanks to Sven-Erik Andersen - sven-erik.
    * lang/italian: Update, thanks to Rebe - rebeluca.
    * lang/estonian: Update, thanks to Marko Ellermaa - uhuu.
    * lang/finnish: Update, thanks to Yoneh - yoneh.
    * lang/bulgarian: Update, thanks to Stanislav Yordanov - stanprog.
    * lang/czech: Update.

2006-05-29 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php: bug #1496881, CVS link broken in main.php

2006-05-26 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php: bug #1451426, edit breaks protected BLOB field, 
      changes it from NULL to empty string

2006-05-23 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php, tbl_replace.php: bug #1438999, updating a multi-table
      view

2006-05-21 Marc Delisle  <lem9@users.sourceforge.net>
    * import.php, lang/*: bug #1467804, replaced strNothingToImport
      by strNoDataReceived

2006-05-20 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.8.1 released from MAINT_2_8_1

2006-05-19 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php: indicate on the Sum line that storage type and
      collation are the default values

2006-05-18 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/check_user_privileges.lib.php, /database_interface.lib.php, /db_details_links.inc.php,
      /server_common.inc.php, /header.inc.php: bug #1490193 and code simplification

2006-05-17 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: bug #1478812, Add user (password containing 